--- a/views/predict.ejs
+++ b/views/predict.ejs
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/predict">Predict</a></li>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="document.html">Documentation</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -74,7 +74,7 @@
         <% } %>
     </div>
     <footer class="<%= locals.prediction ? 'fixed-footer' : 'normal-footer' %>">
-        <p>&copy; 2023 Manthena Dileep Sai. All rights reserved. | Contact: dileepsaimanthena4930@gmail.com | <a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a> | Acknowledgments</p>
+        &copy; 2023 Manthena Dileep sai. All rights reserved.
     </footer>
 </body>
 </html>
